Another mono commit D:

--- a/src/template.htm
+++ b/src/template.htm
@@ -1,13 +1,14 @@
 <html>
 
 <head>
-	<meta name="theme-color" content="#112233">
+	<meta name="theme-color" content="#{hex_color}">
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@gennyble">
 	<meta name="twitter:title" content="An Image of Text in the font {font}">
 	<meta name="twitter:description" content="{text}">
 	<meta name="twitter:image" content="{image_link}">
+	<meta name="twitter:image:alt" content="{text}">
 
 	<meta property="og:title" content="An Image of Text in the font {font}">
 	<meta property="og:site_name" content="Textual">
