Light code cleanup

--- a/tool.html
+++ b/tool.html
@@ -223,6 +223,18 @@
 				x bpattern
 				x pad
 				x lh; lineheight
+
+				Colour types:
+					Named
+						transparent, black, red, green, blue, yellow, fuchsia, magenta, aqua, cyan, white
+					##rrggbb
+					#rrggbbaa
+					#rgb
+					#rgba
+				
+				Patterns
+					trans
+					enby
 			-->
 			<div id="authored">
 				<p>
