Allow alternate color spelling

--- a/tool.html
+++ b/tool.html
@@ -161,7 +161,7 @@
 				</p>
 			</div>
 			<div>
-				<h1><code>c</code>; <code>color</code></h1>
+				<h1><code>c</code>; <code>color</code>; <code>colour</code></h1>
 				<p>
 					The color of the following <code>text</code>s. This will override
 					<code>pattern</code> if it was previously set. TODO: Describe accepted colour formats. In another
@@ -187,7 +187,7 @@
 				</p>
 			</div>
 			<div>
-				<h1><code>bc</code>; <code>bcolor</code></h1>
+				<h1><code>bc</code>; <code>bcolor</code>; <code>bcolour</code></h1>
 				<p>
 					Background color. If set multiple times, the last one will be taken.
 				</p>
