Add ace pattern

--- a/tool.html
+++ b/tool.html
@@ -184,7 +184,7 @@
 			<div>
 				<h1><code>pattern</code></h1>
 				<p>
-					Currently only accepts two pre-programmed pattern: trans, enby. This will override
+					Currently only accepts three pre-programmed pattern: trans, enby, ace. This will override
 					<code>color</code> if it was previously set.
 				</p>
 			</div>
