Use the text as the opengraph title

--- a/src/template.htm
+++ b/src/template.htm
@@ -10,7 +10,7 @@
 	<meta name="twitter:image" content="{twitter_image}">
 	<meta name="twitter:image:alt" content="{text}">
 
-	<meta property="og:title" content="An Image of Text in the font {font}">
+	<meta property="og:title" content="{text}">
 	<meta property="og:site_name" content="Textual">
 	<meta property="og:image" content="{og_image}">
 	<meta property="og:description" content="{text}">
