No more text description for now

--- a/src/template.htm
+++ b/src/template.htm
@@ -5,15 +5,15 @@
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@gennyble">
-	<meta name="twitter:title" content="An Image of Text in the font {font}">
-	<meta name="twitter:description" content="{text}">
+	<meta name="twitter:title" content="{text}">
+	<!-- <meta name="twitter:description" content="{text}"> -->
 	<meta name="twitter:image" content="{twitter_image}">
 	<meta name="twitter:image:alt" content="{text}">
 
 	<meta property="og:title" content="{text}">
 	<meta property="og:site_name" content="Textual">
 	<meta property="og:image" content="{og_image}">
-	<meta property="og:description" content="{text}">
+	<!-- <meta property="og:description" content="{text}"> -->
 
 	<title>{text}</title>
 </head>
