Alt engine beginnings
'Begginnings'? Anyway, just the text if the fonts differ and the font name if not

--- a/src/template.htm
+++ b/src/template.htm
@@ -6,21 +6,21 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@gennyble">
 	<meta name="twitter:title" content="{text}">
-	<!-- <meta name="twitter:description" content="{text}"> -->
+	<meta name="twitter:description" content="{alt}">
 	<meta name="twitter:image" content="{twitter_image}">
-	<meta name="twitter:image:alt" content="{text}">
+	<meta name="twitter:image:alt" content="{alt}">
 
 	<meta property="og:title" content="{text}">
 	<meta property="og:site_name" content="Textual">
 	<meta property="og:image" content="{og_image}">
-	<!-- <meta property="og:description" content="{text}"> -->
+	<meta property="og:description" content="{alt}">
 
 	<title>{text}</title>
 </head>
 
 <body
 	style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center; text-align: center; background-color: #36393f; margin: 0; padding: 0;">
-	<img style="max-width: 90vw" src="{image}" alt="{text}">
+	<img style="max-width: 90vw" src="{image}" alt="{alt}">
 </body>
 
 </html>
