Finish font overhaul

--- a/tool.html
+++ b/tool.html
@@ -162,9 +162,15 @@
 				</p>
 			</div>
 			<div>
-				<h1><code>varient</code></h1>
+				<h1><code>weight</code>; <code>fontweight</code></h1>
 				<p>
-					What version of a font to use. Ex: regular, bold, italic
+					What weight of font to use. Ex: thin, light, bold
+				</p>
+			</div>
+			<div>
+				<h1><code>style</code>; <code>fontstyle</code></h1>
+				<p>
+					What style of font to use. Ex: italic, oblique, normal
 				</p>
 			</div>
 			<div>
@@ -231,19 +237,10 @@
 				- Section for colour format
 				- Describe pattern
 
-				x c; color
-				x pattern
-				x align (center | right | left (default))
-				x aspect
-				x bc; bcolor
-				x bpattern
-				x pad
-				x lh; lineheight
-
 				Colour types:
 					Named
 						transparent, black, red, green, blue, yellow, fuchsia, magenta, aqua, cyan, white
-					##rrggbb
+					#rrggbb
 					#rrggbbaa
 					#rgb
 					#rgba
