Let line height free in tool

--- a/tool.html
+++ b/tool.html
@@ -224,8 +224,9 @@
 					Pad all sides of the image by this number of pixels
 				</p>
 			</div>
-			<div style="display: none">
+			<div>
 				<!-- Line height is not ready yet -->
+				<!-- Why not? gen:2022-07-17 -->
 				<h1><code>lh</code>; <code>lineheight</code></h1>
 				<p>
 					Adjust the height of following <code>text</code>s lines. "font" will use the line height the font
