No more hex for colors

--- a/tool.html
+++ b/tool.html
@@ -301,12 +301,12 @@
 		<section id="colors" class="big">
 			<h2>Colors</h2>
 			<section>
-				<h3>Hex (# optional)</h3>
+				<h3>Hex (no #)</h3>
 				<ul style="list-style: square; padding-left: 1rem;">
-					<li><code>#rrggbb</code></li>
-					<li><code>#rrggbbaa</code></li>
-					<li><code>#rgb</code></li>
-					<li><code>#rgba</code></li>
+					<li><code>rrggbb</code></li>
+					<li><code>rrggbbaa</code></li>
+					<li><code>rgb</code></li>
+					<li><code>rgba</code></li>
 				</ul>
 			</section>
 			<section>
