add pt not to guide

--- a/tool.html
+++ b/tool.html
@@ -230,7 +230,7 @@
 			<div>
 				<h2><code>fs</code>; <code>fontsize</code></h2>
 				<p>
-					The size of the following <code>text</code>s in pixels
+					The size of the following <code>text</code>s in pixels, or suffix with <code>pt</code> for points.
 				</p>
 			</div>
 			<div>
