--- a/guide.html
+++ b/guide.html
@@ -61,7 +61,7 @@
 			border: none;
 		}
 
-		#parameters {
+		.parameters {
 			width: 80vw;
 			margin: 0 auto;
 
@@ -127,7 +127,7 @@
 				width: 100%;
 			}
 
-			#parameters {
+			.parameters {
 				width: 100%;
 			}
 		}
@@ -183,7 +183,11 @@
 				<code>?color=red&text=Red&color=blue&text=Blue</code>
 			</p>
 		</section>
-		<section id="parameters">
+		<!--<h2>Global Parameters</h2>
+		<p>These affect the entire image rather than a single <code>text</code></p>
+		<section class="parameters">
+		</section>-->
+		<section class="parameters">
 			<div>
 				<h2><code>text</code></h2>
 				<p>
