--- a/server/guide.html
+++ b/server/guide.html
@@ -335,7 +335,7 @@
 		</section>
 		<section id="authored">
 			<p>
-				authored by <a href="https://nyble.dev">Genny Z</a>
+				authored by <a href="https://nyble.dev">gennyble</a>
 				<br>
 				<a href="https://github.com/gennyble/textual">source</a>
 			</p>
