add link to example in guide

--- a/server/guide.html
+++ b/server/guide.html
@@ -180,7 +180,8 @@
 				Textual is stateful. When you change the font or color et al. it will be changed for every following
 				<code>text</code> you specify. You may specify parameters multiple times. If, say, you wanted to write
 				"RedBlue" with the words being their color, you might do:
-				<code>?color=red&text=Red&color=blue&text=Blue</code>
+				<code>?color=red&text=Red&color=blue&text=Blue</code> <a
+					href="?color=red&text=Red&color=blue&text=Blue">(see it)</a>
 			</p>
 		</section>
 		<!--<h2>Global Parameters</h2>
